# symphra-modules

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  coverage.xml  index.html  mkdocs.en.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/abc/: index.html
api/config/: index.html
api/events/: index.html
api/exceptions/: index.html
api/loader/: index.html
api/manager/: index.html
api/registry/: index.html
api/resolver/: index.html
api/utils/: index.html
development/: index.html
docs/: README.md  changelog.md
docs/en/: development.md  examples.md  index.md  quickstart.md
docs/en/api/: abc.md  config.md  events.md  exceptions.md  loader.md  manager.md  registry.md  resolver.md  utils.md
docs/en/guide/: async.md  concepts.md  dependencies.md  events.md  lifecycle.md  loading.md  module-definition.md
docs/zh/: development.md  examples.md  index.md  quickstart.md
docs/zh/api/: abc.md  config.md  events.md  exceptions.md  loader.md  manager.md  registry.md  resolver.md  utils.md
docs/zh/guide/: async.md  concepts.md  dependencies.md  events.md  lifecycle.md  loading.md  module-definition.md
examples/: async_demo.py  basic_example.py  dependency_example.py  event_example.py  hot_reload_demo.py  index.html  simple_demo.py  test_dependency_resolution.py
examples/dependency_demo/: __init__.py  cache_module.py  database_module.py  order_module.py  user_module.py
guide/async/: index.html
guide/concepts/: index.html
guide/dependencies/: index.html
guide/events/: index.html
guide/lifecycle/: index.html
guide/loading/: index.html
guide/module-definition/: index.html
quickstart/: index.html
search/: search_index.json
src/symphra_modules/: __init__.py  abc.py  config.py  exceptions.py  manager.py  registry.py
src/symphra_modules/core/: __init__.py  exceptions.py  module.py  persistence.py  state.py
src/symphra_modules/dependency/: __init__.py  graph.py  resolver.py
src/symphra_modules/events/: __init__.py  bus.py  types.py
src/symphra_modules/lifecycle/: __init__.py  manager.py
src/symphra_modules/loader/: __init__.py  base.py  directory.py  filesystem.py  package.py
src/symphra_modules/resolver/: __init__.py  dependency.py
src/symphra_modules/utils/: __init__.py  logger.py
tests/: README.md  conftest.py  test_all.py  test_async.py
tests/fixtures/test_modules_with_deps/: __init__.py  api.py  core.py  database.py  module_a.py  module_b.py
tests/integration/: test_load_with_dependencies.py  test_module_monitoring.py
tests/performance/: test_concurrent.py  test_load_performance.py
tests/unit/: test_abc.py  test_config.py  test_core_module.py  test_coverage_supplement.py  test_dependency_graph.py  test_dependency_graph_enhanced.py  test_dependency_resolver_enhanced.py  test_events.py  test_exceptions.py  test_lifecycle_manager_edge_cases.py  test_loader.py  test_loader_filesystem.py  test_manager.py  test_manager_advanced.py  test_manager_async.py  test_manager_error_handling.py  test_manager_lifecycle.py  test_persistence.py  test_registry.py  test_resolver.py  test_state.py  test_state_management.py
